# ejercicios_gcoop

./: CMakeLists.txt  README.md  codigo_completo.cpp  ejercicio.txt
rust_version/: Cargo.toml
rust_version/src/: main.rs
